add event listener for logging out to leave arena